# cloudflare-worker-ai-rust-example

./: .gitignore  Cargo.toml  README.md  wrangler.toml
src/: lib.rs
src/constants/: constants.rs
src/interfaces/: api_request.rs  api_response.rs  app_state.rs  mod.rs  model_input.rs
src/services/: model_service.rs
