[package]
name = "cloudflare-worker-ai-rust-example"
version = "0.1.0"
edition = "2021"
authors = ["Christian Mena <christian.91.gm@hotmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8.3" }
worker-macros = { version = "0.8.3" }
console_error_panic_hook = "0.1.7"
http = "1.4.1"
serde = "1.0.228"
serde_json = "1.0.150"
